# tauri-app

./: package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  users.json
src-tauri/src/: crypto.rs  main.rs
src/components/: Home.tsx  Login.tsx  Signup.tsx  Start.tsx
src/components/Footer/: Footer.css  Footer.tsx
src/components/Header/: Header.css  Header.tsx
src/components/Home/: Home.tsx
src/components/LandingPage/: LandingPage.css  LandingPage.tsx
src/components/Login/: Login.tsx
src/components/Logout/: Logout.tsx
src/components/Signup/: Signup.tsx
